# Fuselect

./: .gitattributes  .gitignore  2026-07-23-fuselect-cli-plan.md  Cargo.toml  README.md
.github/workflows/: ci.yml
migrations/: 0001_initial.sql
research/: README.md  fusion-and-protocol-notes.md
src/: app.rs  lib.rs  main.rs
src/config/: mod.rs  types.rs
src/domain/: budget.rs  error.rs  fusion.rs  mod.rs  worker.rs
src/secrets/: keyring.rs  mod.rs
src/storage/: migrations.rs  mod.rs  models.rs  paths.rs  sqlite.rs
tests/: cli_smoke.rs  commands_config.rs  config_validation.rs  secrets_boundary.rs  storage_metadata.rs
