[package]
name = "fuselect"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "A local, privacy-first Fusion gateway for coding agents."
repository = "https://github.com/fuselect/fuselect"
keywords = ["codex", "gateway", "fusion", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI command tree (phase 0)
clap = { version = "4.5.50", features = ["derive"] }
# Async runtime for SQLite repository APIs (phase 1)
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# Metadata database (phase 1); no network features
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
] }
# Platform config/data directory resolution when FUSELECT_HOME is unset
dirs = "6.0.0"
# UTC timestamps for metadata rows
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }
# Capability / advisor ID lists stored as JSON text columns
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# Typed storage/secret errors without leaking secrets
thiserror = "2.0.12"
# Secret memory zeroization and redacted Debug
secrecy = "0.10.3"
zeroize = { version = "1.8.1", features = ["derive"] }
# OS credential store adapter (tests use FakeSecretStore only)
keyring = "3.6.2"
# Cryptographically secure gateway token generation and URL-safe encoding.
getrandom = "0.3.3"
base64 = "0.22.1"
# Cross-platform hidden terminal entry for interactive API-key setup.
rpassword = "7.4.0"

[dev-dependencies]
tempfile = "3.20.0"
# Integration tests open temporary SQLite files and drive async repository APIs.
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
] }
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }
